fix: alignment change

--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -1,1 +1,8 @@
-
+.home {
+  &__title {
+    font-size: 3rem;
+  }
+  p {
+    font-size: 1.3rem;
+  }
+}
